src/z80asm/z80asm2/t/30-directive/expected/repti_11.txt
% z88dk-z80asm -v -dump-after-macro-expansion t/30-directive//input/repti_11.asm
Assembling t/30-directive/input/repti_11.asm...
t/30-directive/input/repti_11.asm:1:7: error: Expected identifier after REPTI
    #repti ; no identifier
          ^
t/30-directive/input/repti_11.asm:2:2: error: Unexpected ENDR directive
    #endr
     ^
t/30-directive/input/repti_11.asm:3:8: error: Expected identifier after REPTI
    #repti 27 ; no identifier
           ^
t/30-directive/input/repti_11.asm:4:2: error: Unexpected ENDR directive
    #endr
     ^
t/30-directive/input/repti_11.asm:5:9: error: Expected comma after identifier in REPTI
    #repti v ; no comma
            ^
t/30-directive/input/repti_11.asm:6:2: error: Unexpected ENDR directive
    #endr
     ^
t/30-directive/input/repti_11.asm:7:10: error: Expected arguments after REPTI
    #repti v, ; no arguments
             ^
t/30-directive/input/repti_11.asm:8:2: error: Unexpected ENDR directive
    #endr
     ^
t/30-directive/input/repti_11.asm:9:14: error: Unmatched '('
    #repti v, (2+3
                 ^
# file: t/30-directive/input/repti_11.asm
Identifier	"ld"	10:2	keyword=LD 
Identifier	"a"	10:5	keyword=A 
Comma	","	10:6	
Identifier	"v"	10:8	keyword=V 
EndOfLine	"\n"	10:9	
t/30-directive/input/repti_11.asm:11:2: error: Unexpected ENDR directive
    #endr
     ^
t/30-directive/input/repti_11.asm:12:14: error: Unmatched ')'
    #repti v, 2+3)
                 ^
Identifier	"ld"	13:2	keyword=LD 
Identifier	"a"	13:5	keyword=A 
Comma	","	13:6	
Identifier	"v"	13:8	keyword=V 
EndOfLine	"\n"	13:9	
t/30-directive/input/repti_11.asm:14:2: error: Unexpected ENDR directive
    #endr
     ^
t/30-directive/input/repti_11.asm:15:2: error: Unexpected end of file, missing ENDR for REPTI
    #repti v, a, b, c ; no endr
     ^
